// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App-view generic tests When app is open 1`] = `
<div
  className="iZQvSV"
>
  <div
    className="hzvsCQ"
    onClick={[Function]}
  >
    <svg
      id="close"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M6.23 4.81A1 1 0 004.8 6.23L10.6 12 4.8 17.77a1 1 0 101.42 1.42L12 13.4l5.78 5.78a1 1 0 001.4-1.42L13.42 12l5.78-5.77a1 1 0 10-1.41-1.42L12 10.6 6.23 4.8z"
      />
    </svg>
  </div>
  <div
    className="JmYKp"
    onClick={[Function]}
  >
    <svg
      id="open"
      viewBox="0 0 20 15"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 1a1 1 0 011-1h18a1 1 0 110 2H1a1 1 0 01-1-1zM0 7.03a1 1 0 011-1h18a1 1 0 110 2H1a1 1 0 01-1-1zM1 12.06a1 1 0 100 2h18a1 1 0 000-2H1z"
      />
    </svg>
  </div>
  <aside
    className="hUkwvx"
  >
    <div
      className="iluSoF"
    >
      <div
        className="bcuorQ"
      >
        <div
          className="jVvKPm"
        >
          <svg
            viewBox="0 0 44 44"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              fill="#7000E3"
              height="44"
              rx="3.9"
              width="44"
            />
            <path
              d="M28 11.3c-2.3 0-4.6 1-6 3-1.4-2-3.7-3-6-3-4.3 0-7.8 3.3-7.8 7.6 0 6.5 9.3 15 13.8 15s13.8-8.5 13.8-15c0-4.4-3.5-7.7-7.8-7.7"
              fill="#FF671B"
            />
          </svg>
        </div>
      </div>
      <div
        className="lgcvAJ"
      >
        <input
          autoComplete="off"
          className="ljwxKu"
          placeholder="Search component name"
          type="text"
          value=""
        />
        <div
          className="fUbWzG"
        >
          <div
            className="dZVOcY"
            role="presentation"
            size={0}
          >
            <svg
              viewBox="0 0 32 32"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20.5 20.92l7.62 7.67-1.43 1.4-7.72-7.79A10.83 10.83 0 0 1 2 13.28v-.45a10.84 10.84 0 0 1 21.67 0v.45c0 2.98-1.21 5.68-3.16 7.64zM4 12.82v.46a8.83 8.83 0 0 0 17.67 0v-.45a8.83 8.83 0 0 0-17.67 0z"
                fillRule="evenodd"
              />
            </svg>
          </div>
        </div>
      </div>
      <nav
        className="qsynj"
      >
        <div
          className="bxcqNe"
        >
          <div
            className="kfUgGk"
          >
            <div
              className="gAoKva"
              onClick={[Function]}
            >
              Structure
            </div>
            <div
              className="zWviA"
            >
              <div
                className="kyEYOF"
              >
                <a
                  className="bLaJUp"
                  data-vrt-locator="link"
                  href="#Structure-Component"
                >
                  Component
                </a>
              </div>
            </div>
          </div>
        </div>
        <div
          className="bxcqNe"
        >
          <div
            className="kfUgGk"
          >
            <div
              className="gAoKva"
              onClick={[Function]}
            >
              Components
            </div>
            <div
              className="zWviA"
            >
              <div
                className="kyEYOF"
              >
                <a
                  className="bLaJUp"
                  data-vrt-locator="link"
                  href="#Components-ErrorBoundary"
                >
                  ErrorBoundary
                </a>
              </div>
            </div>
          </div>
        </div>
      </nav>
    </div>
  </aside>
  <main
    className="dhejPX"
    style={
      Object {
        "transform": "translateX(0)",
        "transition": "transform 0.2s .05s cubic-bezier(0.87, 0, 0.13, 1)",
      }
    }
  >
    <article
      className="dEUWaB"
      id="welcome!"
    >
      <header
        className="styleguide-component__header"
      >
        <h1
          className="jZEJzC"
        >
          Welcome!
        </h1>
        <div
          className="hNyKnl"
        >
          Style guide is a tool to illustrate, sandbox and test your components.
        </div>
      </header>
    </article>
  </main>
</div>
`;

exports[`App-view generic tests When component is open 1`] = `
.c3 {
  overflow-x: hidden;
  width: 300px;
  -webkit-font-smoothing: antialiased;
  -webkit-transition: -webkit-transform 0.2s cubic-bezier(0.87,0,0.13,1);
  -webkit-transition: transform 0.2s cubic-bezier(0.87,0,0.13,1);
  transition: transform 0.2s cubic-bezier(0.87,0,0.13,1);
  -webkit-transition-delay: .2s;
  transition-delay: .2s;
  -webkit-transform: translate3d(0px,0px,0px);
  -ms-transform: translate3d(0px,0px,0px);
  transform: translate3d(0px,0px,0px);
  will-change: transform;
}

.c4 {
  position: fixed;
  background: #f0f0f0;
  border-right: 1px solid #f0f0f0;
  width: inherit;
  overflow-y: scroll;
  top: 0;
  left: 0;
  bottom: 0;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-bottom: 4px;
  padding-top: 16px;
}

.c6 {
  width: 32px;
  height: 32px;
  margin-bottom: 4px;
}

.c2 {
  position: fixed;
  z-index: 1;
  cursor: pointer;
  width: 24px;
  height: 24px;
  top: 16px;
  left: 16px;
  -webkit-transform: translate3d(-50px,0px,0px);
  -ms-transform: translate3d(-50px,0px,0px);
  transform: translate3d(-50px,0px,0px);
  -webkit-transition: -webkit-transform 0.2s cubic-bezier(0.25,1,0.5,1);
  -webkit-transition: transform 0.2s cubic-bezier(0.25,1,0.5,1);
  transition: transform 0.2s cubic-bezier(0.25,1,0.5,1);
  -webkit-transition-delay: 0;
  transition-delay: 0;
}

.c2 svg {
  fill: currentColor;
}

.c1 {
  position: fixed;
  z-index: 1;
  cursor: pointer;
  width: 24px;
  height: 24px;
  top: 16px;
  left: 316px;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transition: all 0.2s cubic-bezier(0.34,1.56,0.64,1);
  transition: all 0.2s cubic-bezier(0.34,1.56,0.64,1);
  -webkit-transition-delay: .4s;
  transition-delay: .4s;
  opacity: 1;
}

.c1 svg {
  fill: currentColor;
}

.c10 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: 24px;
  height: 24px;
  fill: currentColor;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  color: inherit;
}

.c10 > svg {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: inherit;
  width: inherit;
  max-height: inherit;
  height: inherit;
  background: inherit;
  fill: inherit;
}

.c37 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: 16px;
  height: 16px;
  fill: currentColor;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  color: inherit;
}

.c37 > svg {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: inherit;
  width: inherit;
  max-height: inherit;
  height: inherit;
  background: inherit;
  fill: inherit;
}

.c7 {
  position: relative;
  color: #ccc;
  padding: 0 12px;
  margin-bottom: 8px;
  font-family: sans-serif;
}

.c7:focus-within {
  color: #000;
}

.c8 {
  background-color: #fff;
  width: 100%;
  display: block;
  font-size: 16px;
  color: #303030;
  height: 40px;
  line-height: 32px;
  padding: 6px 6px 6px 36px;
  border: 1px solid #ccc;
}

.c8:focus {
  border-color: #000;
}

.c8::-webkit-input-placeholder {
  color: #ccc;
  opacity: 1;
}

.c8:-moz-placeholder {
  color: #ccc;
  opacity: 1;
}

.c8::-moz-placeholder {
  color: #ccc;
  opacity: 1;
}

.c8:-ms-input-placeholder {
  color: #ccc;
  opacity: 1;
}

.c9 {
  position: absolute;
  top: 50%;
  left: 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  color: inherit;
}

.c13 {
  display: block;
}

.c14 {
  position: relative;
  display: block;
  padding: 16px;
  border-bottom: 1px solid #f0f0f0;
  background: #fff;
  color: #000;
  font-size: 16px;
  cursor: pointer;
}

.c15 {
  padding: 16px;
}

.c18 {
  padding: 16px;
  display: none;
}

.c16 {
  padding: 8px 16px;
}

.c17 {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #7000e3;
  font-weight: 600;
}

.c19 {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #666;
}

.c11 {
  position: relative;
  font-family: sans-serif;
}

.c12 {
  position: relative;
  margin: 0;
  padding: 0;
  list-style: none;
}

.c20 {
  padding: 32px;
  position: relative;
  width: 100%;
  background: #fff;
}

.c32 {
  display: block;
}

.c33 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
  background: #f0f0f0;
  border-radius: 4px 4px 0 0;
  color: #000;
  padding: 0 16px;
}

.styleguide-sandbox .c33:only-child {
  border-radius: 4px;
}

.c34 {
  margin: 0;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  font-size: 16px;
  font-weight: 300;
  font-family: sans-serif;
  padding: 16px 0;
  word-break: break-word;
}

.c35 {
  margin-left: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c36 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: #202020;
  opacity: 0.5;
  -webkit-transition: opacity 0.1s ease;
  transition: opacity 0.1s ease;
  padding: 0 8px;
}

.c36:hover {
  opacity: 1;
}

.c38 {
  padding: 20px;
  border: 1px solid #f0f0f0;
  border-top: 0;
  box-shadow: 0 -1px 0 0 #f0f0f0;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
}

.c26 {
  padding-top: 32px;
}

.c27 {
  margin-top: 0;
  margin-bottom: 8px;
  font-size: 32px;
  color: #000;
  font-family: sans-serif;
  word-break: break-word;
}

.c28 {
  font-family: sans-serif;
  font-size: 16px;
  color: #a0a0a0;
  margin-bottom: 16px;
  max-width: 50%;
}

.c29 {
  margin-top: 16px;
}

.c31 + .c30 {
  margin-top: 32px;
}

.c22 + .c21 {
  margin-top: 32px;
}

.c23 {
  max-width: 960px;
  min-width: 320px;
  margin: auto;
}

.c25 + .c24 {
  margin-top: 40px;
}

.c0 {
  background: #fff;
  display: grid;
  grid-template-columns: 300px auto;
}

<div
  className="c0"
>
  <div
    className="c1"
    onClick={[Function]}
  >
    <svg
      id="close"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M6.23 4.81A1 1 0 004.8 6.23L10.6 12 4.8 17.77a1 1 0 101.42 1.42L12 13.4l5.78 5.78a1 1 0 001.4-1.42L13.42 12l5.78-5.77a1 1 0 10-1.41-1.42L12 10.6 6.23 4.8z"
      />
    </svg>
  </div>
  <div
    className="c2"
    onClick={[Function]}
  >
    <svg
      id="open"
      viewBox="0 0 20 15"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 1a1 1 0 011-1h18a1 1 0 110 2H1a1 1 0 01-1-1zM0 7.03a1 1 0 011-1h18a1 1 0 110 2H1a1 1 0 01-1-1zM1 12.06a1 1 0 100 2h18a1 1 0 000-2H1z"
      />
    </svg>
  </div>
  <aside
    className="c3"
  >
    <div
      className="c4"
    >
      <div
        className="c5"
      >
        <div
          className="c6"
        >
          <svg
            viewBox="0 0 44 44"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              fill="#7000E3"
              height="44"
              rx="3.9"
              width="44"
            />
            <path
              d="M28 11.3c-2.3 0-4.6 1-6 3-1.4-2-3.7-3-6-3-4.3 0-7.8 3.3-7.8 7.6 0 6.5 9.3 15 13.8 15s13.8-8.5 13.8-15c0-4.4-3.5-7.7-7.8-7.7"
              fill="#FF671B"
            />
          </svg>
        </div>
      </div>
      <div
        className="c7"
      >
        <input
          autoComplete="off"
          className="c8"
          placeholder="Search component name"
          type="text"
          value=""
        />
        <div
          className="c9"
        >
          <div
            className="c10"
            role="presentation"
            size={0}
          >
            <svg
              viewBox="0 0 32 32"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20.5 20.92l7.62 7.67-1.43 1.4-7.72-7.79A10.83 10.83 0 0 1 2 13.28v-.45a10.84 10.84 0 0 1 21.67 0v.45c0 2.98-1.21 5.68-3.16 7.64zM4 12.82v.46a8.83 8.83 0 0 0 17.67 0v-.45a8.83 8.83 0 0 0-17.67 0z"
                fillRule="evenodd"
              />
            </svg>
          </div>
        </div>
      </div>
      <nav
        className="c11"
      >
        <div
          className="c12"
        >
          <div
            className="c13"
          >
            <div
              className="c14"
              onClick={[Function]}
            >
              Structure
            </div>
            <div
              className="c15"
            >
              <div
                className="c16"
              >
                <a
                  className="c17"
                  data-vrt-locator="link"
                  href="#Structure-Component"
                >
                  Component
                </a>
              </div>
            </div>
          </div>
        </div>
        <div
          className="c12"
        >
          <div
            className="c13"
          >
            <div
              className="c14"
              onClick={[Function]}
            >
              Components
            </div>
            <div
              className="c18"
            >
              <div
                className="c16"
              >
                <a
                  className="c19"
                  data-vrt-locator="link"
                  href="#Components-ErrorBoundary"
                >
                  ErrorBoundary
                </a>
              </div>
            </div>
          </div>
        </div>
      </nav>
    </div>
  </aside>
  <main
    className="c20"
    style={
      Object {
        "transform": "translateX(0)",
        "transition": "transform 0.2s .05s cubic-bezier(0.87, 0, 0.13, 1)",
      }
    }
  >
    <section
      className="c21 c22"
    >
      <div
        className="c23"
      >
        <div
          className="c24 c25"
        >
          <article
            className="c26"
            id="component"
          >
            <header
              className="styleguide-component__header"
            >
              <h1
                className="c27"
              >
                Component
              </h1>
              <div
                className="c28"
              >
                
              </div>
            </header>
            <div
              className="c29"
            >
              <div
                className="c30 c31"
              >
                <section
                  className="c32"
                  data-name="SpecComponentEmpty"
                  data-vrt-locator="sandbox"
                >
                  <header
                    className="c33"
                  >
                    <h1
                      className="c34"
                      onClick={[Function]}
                    >
                      SpecComponentEmpty
                    </h1>
                    <div
                      className="c35"
                    >
                      <span
                        className="c36"
                        onClick={[Function]}
                      >
                        <div
                          className="c37"
                          role="presentation"
                        >
                          <svg
                            height="16"
                            width="16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M13.444 2H2.556C1.696 2 1 2.696 1 3.556v9.333c0 .859.696 1.555 1.556 1.555h3.11V12.89h-3.11V5.11h10.888v7.778h-3.11v1.555h3.11c.856 0 1.556-.7 1.556-1.555V3.556C15 2.696 14.304 2 13.444 2zM8 6.667l-3.111 3.11h2.333v4.667h1.556V9.778h2.333L8 6.667z"
                            />
                          </svg>
                        </div>
                      </span>
                      <span
                        className="c36"
                        onClick={[Function]}
                      >
                        <div
                          className="c37"
                          role="presentation"
                        >
                          <svg
                            height="16"
                            width="16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M1 12h3v3h2v-5H1v2zm3-8H1v2h5V1H4v3zm6 11h2v-3h3v-2h-5v5zm2-11V1h-2v5h5V4h-3z"
                            />
                          </svg>
                        </div>
                      </span>
                    </div>
                  </header>
                  <div
                    data-vrt-locator="sandbox-content"
                  >
                    <div
                      className="c38"
                    >
                      <article
                        className="c26"
                      >
                        <header
                          className="styleguide-component__header"
                        >
                          <h1
                            className="c27"
                          />
                          <div
                            className="c28"
                          />
                        </header>
                      </article>
                    </div>
                  </div>
                </section>
              </div>
              <div
                className="c30 c31"
              >
                <section
                  className="c32"
                  data-name="SpecComponentPropTypes"
                  data-vrt-locator="sandbox"
                >
                  <header
                    className="c33"
                  >
                    <h1
                      className="c34"
                      onClick={[Function]}
                    >
                      SpecComponentPropTypes
                    </h1>
                    <div
                      className="c35"
                    >
                      <span
                        className="c36"
                        onClick={[Function]}
                      >
                        <div
                          className="c37"
                          role="presentation"
                        >
                          <svg
                            height="16"
                            width="16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M13.444 2H2.556C1.696 2 1 2.696 1 3.556v9.333c0 .859.696 1.555 1.556 1.555h3.11V12.89h-3.11V5.11h10.888v7.778h-3.11v1.555h3.11c.856 0 1.556-.7 1.556-1.555V3.556C15 2.696 14.304 2 13.444 2zM8 6.667l-3.111 3.11h2.333v4.667h1.556V9.778h2.333L8 6.667z"
                            />
                          </svg>
                        </div>
                      </span>
                      <span
                        className="c36"
                        onClick={[Function]}
                      >
                        <div
                          className="c37"
                          role="presentation"
                        >
                          <svg
                            height="16"
                            width="16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M1 12h3v3h2v-5H1v2zm3-8H1v2h5V1H4v3zm6 11h2v-3h3v-2h-5v5zm2-11V1h-2v5h5V4h-3z"
                            />
                          </svg>
                        </div>
                      </span>
                    </div>
                  </header>
                  <div
                    data-vrt-locator="sandbox-content"
                  >
                    <div
                      className="c38"
                    >
                      <article
                        className="c26"
                      >
                        <header
                          className="styleguide-component__header"
                        >
                          <h1
                            className="c27"
                          />
                          <div
                            className="c28"
                          />
                        </header>
                      </article>
                    </div>
                  </div>
                </section>
              </div>
              <div
                className="c30 c31"
              >
                <section
                  className="c32"
                  data-name="SpecComponentFull"
                  data-vrt-locator="sandbox"
                >
                  <header
                    className="c33"
                  >
                    <h1
                      className="c34"
                      onClick={[Function]}
                    >
                      SpecComponentFull
                    </h1>
                    <div
                      className="c35"
                    >
                      <span
                        className="c36"
                        onClick={[Function]}
                      >
                        <div
                          className="c37"
                          role="presentation"
                        >
                          <svg
                            height="16"
                            width="16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M13.444 2H2.556C1.696 2 1 2.696 1 3.556v9.333c0 .859.696 1.555 1.556 1.555h3.11V12.89h-3.11V5.11h10.888v7.778h-3.11v1.555h3.11c.856 0 1.556-.7 1.556-1.555V3.556C15 2.696 14.304 2 13.444 2zM8 6.667l-3.111 3.11h2.333v4.667h1.556V9.778h2.333L8 6.667z"
                            />
                          </svg>
                        </div>
                      </span>
                      <span
                        className="c36"
                        onClick={[Function]}
                      >
                        <div
                          className="c37"
                          role="presentation"
                        >
                          <svg
                            height="16"
                            width="16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M1 12h3v3h2v-5H1v2zm3-8H1v2h5V1H4v3zm6 11h2v-3h3v-2h-5v5zm2-11V1h-2v5h5V4h-3z"
                            />
                          </svg>
                        </div>
                      </span>
                    </div>
                  </header>
                  <div
                    data-vrt-locator="sandbox-content"
                  >
                    <div
                      className="c38"
                    >
                      <article
                        className="c26"
                      >
                        <header
                          className="styleguide-component__header"
                        >
                          <h1
                            className="c27"
                          />
                          <div
                            className="c28"
                          />
                        </header>
                      </article>
                    </div>
                  </div>
                </section>
              </div>
            </div>
          </article>
        </div>
      </div>
    </section>
  </main>
</div>
`;

exports[`App-view generic tests When filter doesn\`t show components 1`] = `
.c3 {
  overflow-x: hidden;
  width: 300px;
  -webkit-font-smoothing: antialiased;
  -webkit-transition: -webkit-transform 0.2s cubic-bezier(0.87,0,0.13,1);
  -webkit-transition: transform 0.2s cubic-bezier(0.87,0,0.13,1);
  transition: transform 0.2s cubic-bezier(0.87,0,0.13,1);
  -webkit-transition-delay: .2s;
  transition-delay: .2s;
  -webkit-transform: translate3d(0px,0px,0px);
  -ms-transform: translate3d(0px,0px,0px);
  transform: translate3d(0px,0px,0px);
  will-change: transform;
}

.c4 {
  position: fixed;
  background: #f0f0f0;
  border-right: 1px solid #f0f0f0;
  width: inherit;
  overflow-y: scroll;
  top: 0;
  left: 0;
  bottom: 0;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-bottom: 4px;
  padding-top: 16px;
}

.c6 {
  width: 32px;
  height: 32px;
  margin-bottom: 4px;
}

.c2 {
  position: fixed;
  z-index: 1;
  cursor: pointer;
  width: 24px;
  height: 24px;
  top: 16px;
  left: 16px;
  -webkit-transform: translate3d(-50px,0px,0px);
  -ms-transform: translate3d(-50px,0px,0px);
  transform: translate3d(-50px,0px,0px);
  -webkit-transition: -webkit-transform 0.2s cubic-bezier(0.25,1,0.5,1);
  -webkit-transition: transform 0.2s cubic-bezier(0.25,1,0.5,1);
  transition: transform 0.2s cubic-bezier(0.25,1,0.5,1);
  -webkit-transition-delay: 0;
  transition-delay: 0;
}

.c2 svg {
  fill: currentColor;
}

.c1 {
  position: fixed;
  z-index: 1;
  cursor: pointer;
  width: 24px;
  height: 24px;
  top: 16px;
  left: 316px;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transition: all 0.2s cubic-bezier(0.34,1.56,0.64,1);
  transition: all 0.2s cubic-bezier(0.34,1.56,0.64,1);
  -webkit-transition-delay: .4s;
  transition-delay: .4s;
  opacity: 1;
}

.c1 svg {
  fill: currentColor;
}

.c10 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: 24px;
  height: 24px;
  fill: currentColor;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  color: inherit;
}

.c10 > svg {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: inherit;
  width: inherit;
  max-height: inherit;
  height: inherit;
  background: inherit;
  fill: inherit;
}

.c7 {
  position: relative;
  color: #ccc;
  padding: 0 12px;
  margin-bottom: 8px;
  font-family: sans-serif;
}

.c7:focus-within {
  color: #000;
}

.c8 {
  background-color: #fff;
  width: 100%;
  display: block;
  font-size: 16px;
  color: #303030;
  height: 40px;
  line-height: 32px;
  padding: 6px 6px 6px 36px;
  border: 1px solid #ccc;
}

.c8:focus {
  border-color: #000;
}

.c8::-webkit-input-placeholder {
  color: #ccc;
  opacity: 1;
}

.c8:-moz-placeholder {
  color: #ccc;
  opacity: 1;
}

.c8::-moz-placeholder {
  color: #ccc;
  opacity: 1;
}

.c8:-ms-input-placeholder {
  color: #ccc;
  opacity: 1;
}

.c9 {
  position: absolute;
  top: 50%;
  left: 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  color: inherit;
}

.c11 {
  position: relative;
  font-family: sans-serif;
}

.c12 {
  padding: 32px;
  position: relative;
  width: 100%;
  background: #fff;
}

.c13 {
  padding-top: 32px;
}

.c14 {
  margin-top: 0;
  margin-bottom: 8px;
  font-size: 32px;
  color: #000;
  font-family: sans-serif;
  word-break: break-word;
}

.c15 {
  font-family: sans-serif;
  font-size: 16px;
  color: #a0a0a0;
  margin-bottom: 16px;
  max-width: 50%;
}

.c0 {
  background: #fff;
  display: grid;
  grid-template-columns: 300px auto;
}

<div
  className="c0"
>
  <div
    className="c1"
    onClick={[Function]}
  >
    <svg
      id="close"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M6.23 4.81A1 1 0 004.8 6.23L10.6 12 4.8 17.77a1 1 0 101.42 1.42L12 13.4l5.78 5.78a1 1 0 001.4-1.42L13.42 12l5.78-5.77a1 1 0 10-1.41-1.42L12 10.6 6.23 4.8z"
      />
    </svg>
  </div>
  <div
    className="c2"
    onClick={[Function]}
  >
    <svg
      id="open"
      viewBox="0 0 20 15"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 1a1 1 0 011-1h18a1 1 0 110 2H1a1 1 0 01-1-1zM0 7.03a1 1 0 011-1h18a1 1 0 110 2H1a1 1 0 01-1-1zM1 12.06a1 1 0 100 2h18a1 1 0 000-2H1z"
      />
    </svg>
  </div>
  <aside
    className="c3"
  >
    <div
      className="c4"
    >
      <div
        className="c5"
      >
        <div
          className="c6"
        >
          <svg
            viewBox="0 0 44 44"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              fill="#7000E3"
              height="44"
              rx="3.9"
              width="44"
            />
            <path
              d="M28 11.3c-2.3 0-4.6 1-6 3-1.4-2-3.7-3-6-3-4.3 0-7.8 3.3-7.8 7.6 0 6.5 9.3 15 13.8 15s13.8-8.5 13.8-15c0-4.4-3.5-7.7-7.8-7.7"
              fill="#FF671B"
            />
          </svg>
        </div>
      </div>
      <div
        className="c7"
      >
        <input
          autoComplete="off"
          className="c8"
          placeholder="Search component name"
          type="text"
          value="g"
        />
        <div
          className="c9"
        >
          <div
            className="c10"
            role="presentation"
            size={0}
          >
            <svg
              viewBox="0 0 32 32"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20.5 20.92l7.62 7.67-1.43 1.4-7.72-7.79A10.83 10.83 0 0 1 2 13.28v-.45a10.84 10.84 0 0 1 21.67 0v.45c0 2.98-1.21 5.68-3.16 7.64zM4 12.82v.46a8.83 8.83 0 0 0 17.67 0v-.45a8.83 8.83 0 0 0-17.67 0z"
                fillRule="evenodd"
              />
            </svg>
          </div>
        </div>
      </div>
      <nav
        className="c11"
      />
    </div>
  </aside>
  <main
    className="c12"
    style={
      Object {
        "transform": "translateX(0)",
        "transition": "transform 0.2s .05s cubic-bezier(0.87, 0, 0.13, 1)",
      }
    }
  >
    <article
      className="c13"
      id="welcome!"
    >
      <header
        className="styleguide-component__header"
      >
        <h1
          className="c14"
        >
          Welcome!
        </h1>
        <div
          className="c15"
        >
          Style guide is a tool to illustrate, sandbox and test your components.
        </div>
      </header>
    </article>
  </main>
</div>
`;

exports[`App-view generic tests When filter show components 1`] = `
.c3 {
  overflow-x: hidden;
  width: 300px;
  -webkit-font-smoothing: antialiased;
  -webkit-transition: -webkit-transform 0.2s cubic-bezier(0.87,0,0.13,1);
  -webkit-transition: transform 0.2s cubic-bezier(0.87,0,0.13,1);
  transition: transform 0.2s cubic-bezier(0.87,0,0.13,1);
  -webkit-transition-delay: .2s;
  transition-delay: .2s;
  -webkit-transform: translate3d(0px,0px,0px);
  -ms-transform: translate3d(0px,0px,0px);
  transform: translate3d(0px,0px,0px);
  will-change: transform;
}

.c4 {
  position: fixed;
  background: #f0f0f0;
  border-right: 1px solid #f0f0f0;
  width: inherit;
  overflow-y: scroll;
  top: 0;
  left: 0;
  bottom: 0;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-bottom: 4px;
  padding-top: 16px;
}

.c6 {
  width: 32px;
  height: 32px;
  margin-bottom: 4px;
}

.c2 {
  position: fixed;
  z-index: 1;
  cursor: pointer;
  width: 24px;
  height: 24px;
  top: 16px;
  left: 16px;
  -webkit-transform: translate3d(-50px,0px,0px);
  -ms-transform: translate3d(-50px,0px,0px);
  transform: translate3d(-50px,0px,0px);
  -webkit-transition: -webkit-transform 0.2s cubic-bezier(0.25,1,0.5,1);
  -webkit-transition: transform 0.2s cubic-bezier(0.25,1,0.5,1);
  transition: transform 0.2s cubic-bezier(0.25,1,0.5,1);
  -webkit-transition-delay: 0;
  transition-delay: 0;
}

.c2 svg {
  fill: currentColor;
}

.c1 {
  position: fixed;
  z-index: 1;
  cursor: pointer;
  width: 24px;
  height: 24px;
  top: 16px;
  left: 316px;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transition: all 0.2s cubic-bezier(0.34,1.56,0.64,1);
  transition: all 0.2s cubic-bezier(0.34,1.56,0.64,1);
  -webkit-transition-delay: .4s;
  transition-delay: .4s;
  opacity: 1;
}

.c1 svg {
  fill: currentColor;
}

.c10 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: 24px;
  height: 24px;
  fill: currentColor;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  color: inherit;
}

.c10 > svg {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: inherit;
  width: inherit;
  max-height: inherit;
  height: inherit;
  background: inherit;
  fill: inherit;
}

.c35 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: 16px;
  height: 16px;
  fill: currentColor;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  color: inherit;
}

.c35 > svg {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: inherit;
  width: inherit;
  max-height: inherit;
  height: inherit;
  background: inherit;
  fill: inherit;
}

.c7 {
  position: relative;
  color: #ccc;
  padding: 0 12px;
  margin-bottom: 8px;
  font-family: sans-serif;
}

.c7:focus-within {
  color: #000;
}

.c8 {
  background-color: #fff;
  width: 100%;
  display: block;
  font-size: 16px;
  color: #303030;
  height: 40px;
  line-height: 32px;
  padding: 6px 6px 6px 36px;
  border: 1px solid #ccc;
}

.c8:focus {
  border-color: #000;
}

.c8::-webkit-input-placeholder {
  color: #ccc;
  opacity: 1;
}

.c8:-moz-placeholder {
  color: #ccc;
  opacity: 1;
}

.c8::-moz-placeholder {
  color: #ccc;
  opacity: 1;
}

.c8:-ms-input-placeholder {
  color: #ccc;
  opacity: 1;
}

.c9 {
  position: absolute;
  top: 50%;
  left: 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  color: inherit;
}

.c13 {
  display: block;
}

.c14 {
  position: relative;
  display: block;
  padding: 16px;
  border-bottom: 1px solid #f0f0f0;
  background: #fff;
  color: #000;
  font-size: 16px;
  cursor: pointer;
}

.c15 {
  padding: 16px;
}

.c16 {
  padding: 8px 16px;
}

.c17 {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #7000e3;
  font-weight: 600;
}

.c11 {
  position: relative;
  font-family: sans-serif;
}

.c12 {
  position: relative;
  margin: 0;
  padding: 0;
  list-style: none;
}

.c18 {
  padding: 32px;
  position: relative;
  width: 100%;
  background: #fff;
}

.c30 {
  display: block;
}

.c31 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
  background: #f0f0f0;
  border-radius: 4px 4px 0 0;
  color: #000;
  padding: 0 16px;
}

.styleguide-sandbox .c31:only-child {
  border-radius: 4px;
}

.c32 {
  margin: 0;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  font-size: 16px;
  font-weight: 300;
  font-family: sans-serif;
  padding: 16px 0;
  word-break: break-word;
}

.c33 {
  margin-left: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c34 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: #202020;
  opacity: 0.5;
  -webkit-transition: opacity 0.1s ease;
  transition: opacity 0.1s ease;
  padding: 0 8px;
}

.c34:hover {
  opacity: 1;
}

.c36 {
  padding: 20px;
  border: 1px solid #f0f0f0;
  border-top: 0;
  box-shadow: 0 -1px 0 0 #f0f0f0;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
}

.c24 {
  padding-top: 32px;
}

.c25 {
  margin-top: 0;
  margin-bottom: 8px;
  font-size: 32px;
  color: #000;
  font-family: sans-serif;
  word-break: break-word;
}

.c26 {
  font-family: sans-serif;
  font-size: 16px;
  color: #a0a0a0;
  margin-bottom: 16px;
  max-width: 50%;
}

.c27 {
  margin-top: 16px;
}

.c29 + .c28 {
  margin-top: 32px;
}

.c20 + .c19 {
  margin-top: 32px;
}

.c21 {
  max-width: 960px;
  min-width: 320px;
  margin: auto;
}

.c23 + .c22 {
  margin-top: 40px;
}

.c0 {
  background: #fff;
  display: grid;
  grid-template-columns: 300px auto;
}

<div
  className="c0"
>
  <div
    className="c1"
    onClick={[Function]}
  >
    <svg
      id="close"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M6.23 4.81A1 1 0 004.8 6.23L10.6 12 4.8 17.77a1 1 0 101.42 1.42L12 13.4l5.78 5.78a1 1 0 001.4-1.42L13.42 12l5.78-5.77a1 1 0 10-1.41-1.42L12 10.6 6.23 4.8z"
      />
    </svg>
  </div>
  <div
    className="c2"
    onClick={[Function]}
  >
    <svg
      id="open"
      viewBox="0 0 20 15"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 1a1 1 0 011-1h18a1 1 0 110 2H1a1 1 0 01-1-1zM0 7.03a1 1 0 011-1h18a1 1 0 110 2H1a1 1 0 01-1-1zM1 12.06a1 1 0 100 2h18a1 1 0 000-2H1z"
      />
    </svg>
  </div>
  <aside
    className="c3"
  >
    <div
      className="c4"
    >
      <div
        className="c5"
      >
        <div
          className="c6"
        >
          <svg
            viewBox="0 0 44 44"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              fill="#7000E3"
              height="44"
              rx="3.9"
              width="44"
            />
            <path
              d="M28 11.3c-2.3 0-4.6 1-6 3-1.4-2-3.7-3-6-3-4.3 0-7.8 3.3-7.8 7.6 0 6.5 9.3 15 13.8 15s13.8-8.5 13.8-15c0-4.4-3.5-7.7-7.8-7.7"
              fill="#FF671B"
            />
          </svg>
        </div>
      </div>
      <div
        className="c7"
      >
        <input
          autoComplete="off"
          className="c8"
          placeholder="Search component name"
          type="text"
          value="c"
        />
        <div
          className="c9"
        >
          <div
            className="c10"
            role="presentation"
            size={0}
          >
            <svg
              viewBox="0 0 32 32"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20.5 20.92l7.62 7.67-1.43 1.4-7.72-7.79A10.83 10.83 0 0 1 2 13.28v-.45a10.84 10.84 0 0 1 21.67 0v.45c0 2.98-1.21 5.68-3.16 7.64zM4 12.82v.46a8.83 8.83 0 0 0 17.67 0v-.45a8.83 8.83 0 0 0-17.67 0z"
                fillRule="evenodd"
              />
            </svg>
          </div>
        </div>
      </div>
      <nav
        className="c11"
      >
        <div
          className="c12"
        >
          <div
            className="c13"
          >
            <div
              className="c14"
              onClick={[Function]}
            >
              Structure
            </div>
            <div
              className="c15"
            >
              <div
                className="c16"
              >
                <a
                  className="c17"
                  data-vrt-locator="link"
                  href="#Structure-Component"
                >
                  Component
                </a>
              </div>
            </div>
          </div>
        </div>
      </nav>
    </div>
  </aside>
  <main
    className="c18"
    style={
      Object {
        "transform": "translateX(0)",
        "transition": "transform 0.2s .05s cubic-bezier(0.87, 0, 0.13, 1)",
      }
    }
  >
    <section
      className="c19 c20"
    >
      <div
        className="c21"
      >
        <div
          className="c22 c23"
        >
          <article
            className="c24"
            id="component"
          >
            <header
              className="styleguide-component__header"
            >
              <h1
                className="c25"
              >
                Component
              </h1>
              <div
                className="c26"
              >
                
              </div>
            </header>
            <div
              className="c27"
            >
              <div
                className="c28 c29"
              >
                <section
                  className="c30"
                  data-name="SpecComponentEmpty"
                  data-vrt-locator="sandbox"
                >
                  <header
                    className="c31"
                  >
                    <h1
                      className="c32"
                      onClick={[Function]}
                    >
                      SpecComponentEmpty
                    </h1>
                    <div
                      className="c33"
                    >
                      <span
                        className="c34"
                        onClick={[Function]}
                      >
                        <div
                          className="c35"
                          role="presentation"
                        >
                          <svg
                            height="16"
                            width="16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M13.444 2H2.556C1.696 2 1 2.696 1 3.556v9.333c0 .859.696 1.555 1.556 1.555h3.11V12.89h-3.11V5.11h10.888v7.778h-3.11v1.555h3.11c.856 0 1.556-.7 1.556-1.555V3.556C15 2.696 14.304 2 13.444 2zM8 6.667l-3.111 3.11h2.333v4.667h1.556V9.778h2.333L8 6.667z"
                            />
                          </svg>
                        </div>
                      </span>
                      <span
                        className="c34"
                        onClick={[Function]}
                      >
                        <div
                          className="c35"
                          role="presentation"
                        >
                          <svg
                            height="16"
                            width="16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M1 12h3v3h2v-5H1v2zm3-8H1v2h5V1H4v3zm6 11h2v-3h3v-2h-5v5zm2-11V1h-2v5h5V4h-3z"
                            />
                          </svg>
                        </div>
                      </span>
                    </div>
                  </header>
                  <div
                    data-vrt-locator="sandbox-content"
                  >
                    <div
                      className="c36"
                    >
                      <article
                        className="c24"
                      >
                        <header
                          className="styleguide-component__header"
                        >
                          <h1
                            className="c25"
                          />
                          <div
                            className="c26"
                          />
                        </header>
                      </article>
                    </div>
                  </div>
                </section>
              </div>
              <div
                className="c28 c29"
              >
                <section
                  className="c30"
                  data-name="SpecComponentPropTypes"
                  data-vrt-locator="sandbox"
                >
                  <header
                    className="c31"
                  >
                    <h1
                      className="c32"
                      onClick={[Function]}
                    >
                      SpecComponentPropTypes
                    </h1>
                    <div
                      className="c33"
                    >
                      <span
                        className="c34"
                        onClick={[Function]}
                      >
                        <div
                          className="c35"
                          role="presentation"
                        >
                          <svg
                            height="16"
                            width="16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M13.444 2H2.556C1.696 2 1 2.696 1 3.556v9.333c0 .859.696 1.555 1.556 1.555h3.11V12.89h-3.11V5.11h10.888v7.778h-3.11v1.555h3.11c.856 0 1.556-.7 1.556-1.555V3.556C15 2.696 14.304 2 13.444 2zM8 6.667l-3.111 3.11h2.333v4.667h1.556V9.778h2.333L8 6.667z"
                            />
                          </svg>
                        </div>
                      </span>
                      <span
                        className="c34"
                        onClick={[Function]}
                      >
                        <div
                          className="c35"
                          role="presentation"
                        >
                          <svg
                            height="16"
                            width="16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M1 12h3v3h2v-5H1v2zm3-8H1v2h5V1H4v3zm6 11h2v-3h3v-2h-5v5zm2-11V1h-2v5h5V4h-3z"
                            />
                          </svg>
                        </div>
                      </span>
                    </div>
                  </header>
                  <div
                    data-vrt-locator="sandbox-content"
                  >
                    <div
                      className="c36"
                    >
                      <article
                        className="c24"
                      >
                        <header
                          className="styleguide-component__header"
                        >
                          <h1
                            className="c25"
                          />
                          <div
                            className="c26"
                          />
                        </header>
                      </article>
                    </div>
                  </div>
                </section>
              </div>
              <div
                className="c28 c29"
              >
                <section
                  className="c30"
                  data-name="SpecComponentFull"
                  data-vrt-locator="sandbox"
                >
                  <header
                    className="c31"
                  >
                    <h1
                      className="c32"
                      onClick={[Function]}
                    >
                      SpecComponentFull
                    </h1>
                    <div
                      className="c33"
                    >
                      <span
                        className="c34"
                        onClick={[Function]}
                      >
                        <div
                          className="c35"
                          role="presentation"
                        >
                          <svg
                            height="16"
                            width="16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M13.444 2H2.556C1.696 2 1 2.696 1 3.556v9.333c0 .859.696 1.555 1.556 1.555h3.11V12.89h-3.11V5.11h10.888v7.778h-3.11v1.555h3.11c.856 0 1.556-.7 1.556-1.555V3.556C15 2.696 14.304 2 13.444 2zM8 6.667l-3.111 3.11h2.333v4.667h1.556V9.778h2.333L8 6.667z"
                            />
                          </svg>
                        </div>
                      </span>
                      <span
                        className="c34"
                        onClick={[Function]}
                      >
                        <div
                          className="c35"
                          role="presentation"
                        >
                          <svg
                            height="16"
                            width="16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M1 12h3v3h2v-5H1v2zm3-8H1v2h5V1H4v3zm6 11h2v-3h3v-2h-5v5zm2-11V1h-2v5h5V4h-3z"
                            />
                          </svg>
                        </div>
                      </span>
                    </div>
                  </header>
                  <div
                    data-vrt-locator="sandbox-content"
                  >
                    <div
                      className="c36"
                    >
                      <article
                        className="c24"
                      >
                        <header
                          className="styleguide-component__header"
                        >
                          <h1
                            className="c25"
                          />
                          <div
                            className="c26"
                          />
                        </header>
                      </article>
                    </div>
                  </div>
                </section>
              </div>
            </div>
          </article>
        </div>
      </div>
    </section>
  </main>
</div>
`;

exports[`App-view generic tests When we open component from app 1`] = `
.c3 {
  overflow-x: hidden;
  width: 300px;
  -webkit-font-smoothing: antialiased;
  -webkit-transition: -webkit-transform 0.2s cubic-bezier(0.87,0,0.13,1);
  -webkit-transition: transform 0.2s cubic-bezier(0.87,0,0.13,1);
  transition: transform 0.2s cubic-bezier(0.87,0,0.13,1);
  -webkit-transition-delay: .2s;
  transition-delay: .2s;
  -webkit-transform: translate3d(0px,0px,0px);
  -ms-transform: translate3d(0px,0px,0px);
  transform: translate3d(0px,0px,0px);
  will-change: transform;
}

.c4 {
  position: fixed;
  background: #f0f0f0;
  border-right: 1px solid #f0f0f0;
  width: inherit;
  overflow-y: scroll;
  top: 0;
  left: 0;
  bottom: 0;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-bottom: 4px;
  padding-top: 16px;
}

.c6 {
  width: 32px;
  height: 32px;
  margin-bottom: 4px;
}

.c2 {
  position: fixed;
  z-index: 1;
  cursor: pointer;
  width: 24px;
  height: 24px;
  top: 16px;
  left: 16px;
  -webkit-transform: translate3d(-50px,0px,0px);
  -ms-transform: translate3d(-50px,0px,0px);
  transform: translate3d(-50px,0px,0px);
  -webkit-transition: -webkit-transform 0.2s cubic-bezier(0.25,1,0.5,1);
  -webkit-transition: transform 0.2s cubic-bezier(0.25,1,0.5,1);
  transition: transform 0.2s cubic-bezier(0.25,1,0.5,1);
  -webkit-transition-delay: 0;
  transition-delay: 0;
}

.c2 svg {
  fill: currentColor;
}

.c1 {
  position: fixed;
  z-index: 1;
  cursor: pointer;
  width: 24px;
  height: 24px;
  top: 16px;
  left: 316px;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transition: all 0.2s cubic-bezier(0.34,1.56,0.64,1);
  transition: all 0.2s cubic-bezier(0.34,1.56,0.64,1);
  -webkit-transition-delay: .4s;
  transition-delay: .4s;
  opacity: 1;
}

.c1 svg {
  fill: currentColor;
}

.c10 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: 24px;
  height: 24px;
  fill: currentColor;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  color: inherit;
}

.c10 > svg {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: inherit;
  width: inherit;
  max-height: inherit;
  height: inherit;
  background: inherit;
  fill: inherit;
}

.c7 {
  position: relative;
  color: #ccc;
  padding: 0 12px;
  margin-bottom: 8px;
  font-family: sans-serif;
}

.c7:focus-within {
  color: #000;
}

.c8 {
  background-color: #fff;
  width: 100%;
  display: block;
  font-size: 16px;
  color: #303030;
  height: 40px;
  line-height: 32px;
  padding: 6px 6px 6px 36px;
  border: 1px solid #ccc;
}

.c8:focus {
  border-color: #000;
}

.c8::-webkit-input-placeholder {
  color: #ccc;
  opacity: 1;
}

.c8:-moz-placeholder {
  color: #ccc;
  opacity: 1;
}

.c8::-moz-placeholder {
  color: #ccc;
  opacity: 1;
}

.c8:-ms-input-placeholder {
  color: #ccc;
  opacity: 1;
}

.c9 {
  position: absolute;
  top: 50%;
  left: 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  color: inherit;
}

.c13 {
  display: block;
}

.c14 {
  position: relative;
  display: block;
  padding: 16px;
  border-bottom: 1px solid #f0f0f0;
  background: #fff;
  color: #000;
  font-size: 16px;
  cursor: pointer;
}

.c15 {
  padding: 16px;
  display: none;
}

.c16 {
  padding: 8px 16px;
}

.c17 {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #666;
}

.c11 {
  position: relative;
  font-family: sans-serif;
}

.c12 {
  position: relative;
  margin: 0;
  padding: 0;
  list-style: none;
}

.c18 {
  padding: 32px;
  position: relative;
  width: 100%;
  background: #fff;
}

.c19 {
  padding-top: 32px;
}

.c20 {
  margin-top: 0;
  margin-bottom: 8px;
  font-size: 32px;
  color: #000;
  font-family: sans-serif;
  word-break: break-word;
}

.c21 {
  font-family: sans-serif;
  font-size: 16px;
  color: #a0a0a0;
  margin-bottom: 16px;
  max-width: 50%;
}

.c0 {
  background: #fff;
  display: grid;
  grid-template-columns: 300px auto;
}

<div
  className="c0"
>
  <div
    className="c1"
    onClick={[Function]}
  >
    <svg
      id="close"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M6.23 4.81A1 1 0 004.8 6.23L10.6 12 4.8 17.77a1 1 0 101.42 1.42L12 13.4l5.78 5.78a1 1 0 001.4-1.42L13.42 12l5.78-5.77a1 1 0 10-1.41-1.42L12 10.6 6.23 4.8z"
      />
    </svg>
  </div>
  <div
    className="c2"
    onClick={[Function]}
  >
    <svg
      id="open"
      viewBox="0 0 20 15"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 1a1 1 0 011-1h18a1 1 0 110 2H1a1 1 0 01-1-1zM0 7.03a1 1 0 011-1h18a1 1 0 110 2H1a1 1 0 01-1-1zM1 12.06a1 1 0 100 2h18a1 1 0 000-2H1z"
      />
    </svg>
  </div>
  <aside
    className="c3"
  >
    <div
      className="c4"
    >
      <div
        className="c5"
      >
        <div
          className="c6"
        >
          <svg
            viewBox="0 0 44 44"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              fill="#7000E3"
              height="44"
              rx="3.9"
              width="44"
            />
            <path
              d="M28 11.3c-2.3 0-4.6 1-6 3-1.4-2-3.7-3-6-3-4.3 0-7.8 3.3-7.8 7.6 0 6.5 9.3 15 13.8 15s13.8-8.5 13.8-15c0-4.4-3.5-7.7-7.8-7.7"
              fill="#FF671B"
            />
          </svg>
        </div>
      </div>
      <div
        className="c7"
      >
        <input
          autoComplete="off"
          className="c8"
          placeholder="Search component name"
          type="text"
          value=""
        />
        <div
          className="c9"
        >
          <div
            className="c10"
            role="presentation"
            size={0}
          >
            <svg
              viewBox="0 0 32 32"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20.5 20.92l7.62 7.67-1.43 1.4-7.72-7.79A10.83 10.83 0 0 1 2 13.28v-.45a10.84 10.84 0 0 1 21.67 0v.45c0 2.98-1.21 5.68-3.16 7.64zM4 12.82v.46a8.83 8.83 0 0 0 17.67 0v-.45a8.83 8.83 0 0 0-17.67 0z"
                fillRule="evenodd"
              />
            </svg>
          </div>
        </div>
      </div>
      <nav
        className="c11"
      >
        <div
          className="c12"
        >
          <div
            className="c13"
          >
            <div
              className="c14"
              onClick={[Function]}
            >
              Structure
            </div>
            <div
              className="c15"
            >
              <div
                className="c16"
              >
                <a
                  className="c17"
                  data-vrt-locator="link"
                  href="#Structure-Component"
                >
                  Component
                </a>
              </div>
            </div>
          </div>
        </div>
        <div
          className="c12"
        >
          <div
            className="c13"
          >
            <div
              className="c14"
              onClick={[Function]}
            >
              Components
            </div>
            <div
              className="c15"
            >
              <div
                className="c16"
              >
                <a
                  className="c17"
                  data-vrt-locator="link"
                  href="#Components-ErrorBoundary"
                >
                  ErrorBoundary
                </a>
              </div>
            </div>
          </div>
        </div>
      </nav>
    </div>
  </aside>
  <main
    className="c18"
    style={
      Object {
        "transform": "translateX(0)",
        "transition": "transform 0.2s .05s cubic-bezier(0.87, 0, 0.13, 1)",
      }
    }
  >
    <article
      className="c19"
      id="welcome!"
    >
      <header
        className="styleguide-component__header"
      >
        <h1
          className="c20"
        >
          Welcome!
        </h1>
        <div
          className="c21"
        >
          Style guide is a tool to illustrate, sandbox and test your components.
        </div>
      </header>
    </article>
  </main>
</div>
`;
